OOZIE-3228 [Spark action] Can't load properties from spark-defaults.conf (andras.piros)